2001-06-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic-module/README: Use a better example for box-map, as
	suggested by Thomas Wawrzinek.

2001-06-14  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* scripts/README, scripts/hello.scm, safe/untrusted.scm,
	safe/evil.scm, safe/README, modules/README, modules/main,
	modules/module-0.scm, modules/module-1.scm, modules/module-2.scm:
	Minor cleanup.

	* README: Added intro stuff, restructured a bit.

	* box-dynamic/README, box-module/README, box/README: Cleanup and
	restructuring.

	* box-dynamic-module/box-mixed.scm: New file, demonstrating usage
	of extension library functionality, but without exporting
	procedures from the library.

	Thanks to Thomas Wawrzinek for the idea and example code!
	
	* box-dynamic-module/box-module.scm: Add comments, export
	make-box, box-ref, box-set!.

	* box-dynamic-module/README: Integrate new module (box-mixed),
	restructure and cleanup a bit.

2001-06-06  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic-module/box-module.scm: New file.

2001-06-05  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic-module: New directory, implements the box type in a
	shared library and places the definitions in a C-only module.

	Thanks to Thomas Wawrzinek for this, too!
	
	* box-dynamic/box.c, box/box.c, box-dynamic-module/box.c,
	box-module/box.c (mark_box): Fixed typo in comment.

2001-06-01  Rob Browning  <rlb@cs.utexas.edu>

	* .cvsignore: here and in all subdirectories listing Makefile and
	Makefile.in.

2001-05-31  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic: New directory, implements the box type in a shared
	library (aka extension)

	Thanks to Thomas Wawrzinek for patching box.c into an extension!
	
2001-05-30  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-module: New directory, similar to box, but defines the
	primitives in a module (box-module) instead of defining them
	globally.
