@@ -1,3 +1,10 @@
+2001-07-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
+
+	* box-dynamic/README: Corrected sample session.
+
+	* box-module/box.c, box-dynamic-module/box.c, box-dynamic/box.c
+	* box/box.c: scm_bits_t -> scm_t_bits.
+
 2001-06-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
 
 	* box-dynamic-module/README: Use a better example for box-map, as
